--- a/src/app/components/homepage/animationshome.component.scss
+++ b/src/app/components/homepage/animationshome.component.scss
@@ -232,3 +232,32 @@
   opacity: 1;
   transition: 0.5s ease-in-out;
 }
+
+@-webkit-keyframes fadeInDown{
+  0%{
+      opacity:0;
+      -webkit-transform:translate3d(0,-100%,0);
+      transform:translate3d(0,-100%,0)
+  }
+  to{
+      opacity:1;
+      -webkit-transform:translateZ(0);
+      transform:translateZ(0)
+  }
+}
+@keyframes fadeInDown{
+  0%{
+      opacity:0;
+      -webkit-transform:translate3d(0,-100%,0);
+      transform:translate3d(0,-100%,0)
+  }
+  to{
+      opacity:1;
+      -webkit-transform:translateZ(0);
+      transform:translateZ(0)
+  }
+}
+.fadeInDown{
+  -webkit-animation-name:fadeInDown;
+  animation-name:fadeInDown
+}
