--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -9,14 +9,16 @@ div {
   #intro {
     text-align: center;
     height: 95vh;
-    
-    .binary, #code {
+
+    .binary,
+    #code {
       visibility: hidden;
       position: absolute;
       top: 5%;
       right: 0;
       height: 90%;
       z-index: -1;
+
       img {
         height: 100%;
       }
@@ -31,7 +33,7 @@ div {
       max-width: 40%;
       z-index: -1;
     }
-  
+
     .aboutme {
       position: absolute;
       width: 220px;
@@ -42,21 +44,21 @@ div {
         transition: 1s ease;
         transform: scale(1.1);
       }
-  
+
       h2 {
         letter-spacing: 5px;
         font-weight: bold;
         font-size: 48px;
         font-family: lora;
       }
-  
+
       p {
         text-align: initial;
         font-family: Roboto;
         font-size: 16px;
       }
     }
-  
+
     img {
       max-height: 100%;
       max-width: 100%;
@@ -106,20 +108,8 @@ div {
   }
 }
 
-@media only screen and (max-width: 425px) {
-  #intro {
-    height: auto;
-    .aboutme {
-      position: static;
-      width: auto;
-      padding: 20px;
-    }
-  }
-}
-
 .homeSection {
   text-align: center;
-  // background-color: rgba(128, 128, 128, 0.26);
   background-color: rgba(128, 128, 128, 0.14);
   margin: 10px;
   margin-bottom: 60px;
@@ -127,12 +117,46 @@ div {
   padding-bottom: 10px;
 }
 
-#portfolio {
+#practiceProjects a:hover .btn {
+  display: block;
+}
 
-  .portLink {
-    text-decoration: none;
-    color: #000;
-    h3 > span {
+#practiceProjects a img {
+  transition: 0.5s ease;
+
+  &:hover {
+    filter: brightness(50%);
+    transition: 0.5s ease;
+  }
+}
+
+#portfolio,
+#practiceProjects {
+
+  .btn {
+    display: none;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  .btn-info {
+    border-top-left-radius: 50%;
+    border-bottom-left-radius: 50%;
+    left: 5px;
+  }
+
+  .btn-primary {
+    border-top-right-radius: 50%;
+    border-bottom-right-radius: 50%;
+    right: 5px;
+  }
+
+  h3 {
+    text-align: left;
+    margin-left: 10px;
+
+    >span {
       width: 20px;
       height: 20px;
       border-right: 3px solid;
@@ -141,18 +165,75 @@ div {
       margin-top: 15px;
       border-top: 3px solid;
       transition: 0.5s ease;
-    }
-    &:hover h3 > span {
-      margin-left: 10px;
-      transition: 0.5s ease;
+
+      &:hover {
+        margin-left: 10px;
+        transition: 0.5s ease;
+      }
     }
   }
 
-  h3 {
-    text-align: left;
-    margin-left: 10px;
+  a {
+    text-decoration: none;
   }
 
+  /* Popover styling */
+  .popover__title {
+    font-size: 24px;
+    line-height: 36px;
+    text-decoration: none;
+    color: rgb(228, 68, 68);
+    text-align: center;
+    padding: 15px 0;
+  }
+
+  .popover__wrapper {
+    position: relative;
+    margin-top: 1.5rem;
+    display: inline-block;
+  }
+
+  .popover__content {
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    left: 0;
+    transform: translate(0, 190px); // 15px
+    background-color: #bfbfbf;
+    padding: 1.5rem;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+    width: auto;
+
+    h3 {
+      text-align: center;
+      font-size: 1.3rem;
+    }
+  }
+
+  .popover__content:before {
+    position: absolute;
+    z-index: -1;
+    content: "";
+    right: calc(50% - 10px);
+    top: -8px;
+    border-style: solid;
+    border-width: 0 10px 10px 10px;
+    border-color: transparent transparent #bfbfbf transparent;
+    transition-duration: 0.3s;
+    transition-property: transform;
+  }
+
+  .popover__wrapper:hover .popover__content {
+    z-index: 8;
+    opacity: 1;
+    visibility: visible;
+    transform: translate(0, 175px);
+    transition: all 0.5s cubic-bezier(0.75, -0.02, 0.2, 0.97);
+  }
+
+  .popover__message {
+    text-align: center;
+  }
 
   div {
     width: 280px;
@@ -165,6 +246,10 @@ div {
       border-radius: 10px;
     }
   }
+}
+
+#practiceProjects .card a img:hover #practiceProjects .card .btn {
+  display: block;
 }
 
 #skills {
@@ -206,4 +291,81 @@ div {
   background-color: rgb(228, 178, 53);
   opacity: 0.9;
   border-radius: 40px;
+}
+
+// intro media queries
+@media only screen and (max-width: 850px) {
+  div {
+    #intro {
+      height: auto;
+
+      img {
+        max-width: 50%;
+      }
+
+      .aboutme {
+        position: static;
+        width: auto;
+        top: auto;
+        margin: 10px;
+
+        p {
+          text-align: unset;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 1060px) {
+  div {
+    #intro {
+      .aboutme {
+        width: 300px;
+
+        h2 {
+          font-size: 65px;
+        }
+
+        p {
+          font-size: 22px;
+        }
+      }
+    }
+  }
+}
+
+// portfolio media queries
+@media only screen and (max-width: 425px) {
+  #portfolio {
+    display: block;
+
+    .card {
+      display: block;
+      margin: auto;
+      max-width: 100%;
+      margin-bottom: 20px;
+    }
+  }
+}
+
+// skills media queries
+@media only screen and (max-width: 425px) {
+  #skills {
+    #languages {
+      img {
+        width: 100px;
+        height: 100px;
+      }
+    }
+  }
+}
+
+// contact media queries
+@media only screen and (max-width: 425px) {
+  #contact {
+    #form {
+      padding: 15px;
+    }
+  }
 }
