--- a/src/app/components/homepage/animationshome.component.scss
+++ b/src/app/components/homepage/animationshome.component.scss
@@ -229,35 +229,38 @@
 .zoomIn,
 .bounceInRight,
 .fadeInDown {
-  opacity: 1;
   transition: 0.5s ease-in-out;
 }
 
-@-webkit-keyframes fadeInDown{
-  0%{
-      opacity:0;
-      -webkit-transform:translate3d(0,-100%,0);
-      transform:translate3d(0,-100%,0)
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    transform: translate3d(0, -35%, 0);
   }
-  to{
-      opacity:1;
-      -webkit-transform:translateZ(0);
-      transform:translateZ(0)
-  }
-}
-@keyframes fadeInDown{
-  0%{
-      opacity:0;
-      -webkit-transform:translate3d(0,-100%,0);
-      transform:translate3d(0,-100%,0)
-  }
-  to{
-      opacity:1;
-      -webkit-transform:translateZ(0);
-      transform:translateZ(0)
+
+  to {
+    opacity: 1;
+    transform: translateZ(0);
   }
 }
-.fadeInDown{
-  -webkit-animation-name:fadeInDown;
-  animation-name:fadeInDown
+
+.fadeInDown {
+  animation-name: fadeInDown;
+  animation-fill-mode: unset;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0
+  }
+
+  to {
+    opacity: 1
+  }
+}
+
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+  animation-duration: 2s;
 }
