--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -16,7 +16,7 @@
     </a>
   </div>
 
-  <div style="font-family: Roboto;">
-    &copy; {{ yr }} David-el Yosef
+  <div class="credits">
+    &copy; {{ yr }}, <a target="_blank" href="davidelyosef.firebaseapp.com">David-el Yosef</a>
   </div>
 </div>
