--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -53,15 +53,15 @@
     <h3 id="skillsTitle">Skills</h3>
     <div id="zoomIn" style="animation-delay: 0.5s;">
       <div class="logoSkill">
-        <img src="assets/teamwork.png" alt="skill">
+        <img src="https://media.giphy.com/media/kcrSPE0VQL0Kaqsmek/giphy.gif" alt="skill">
         <p>Team player, very friendly and love to help my friends to reach their goals.</p>
       </div>
       <div class="logoSkill">
-        <img src="assets/mobile.png" alt="skill">
+        <img src="assets/profile/designer.gif" alt="skill">
         <p>Design a responsive web pages for all devices is a top priority.</p>
       </div>
       <div class="logoSkill">
-        <img src="assets/graduation.png" alt="skill">
+        <img src="https://media.giphy.com/media/kfRbG5PRRAbcpMK0qN/giphy.gif" alt="skill">
         <p>Constantly continues to learn new technologies and keeping up-to-date with the freshest
           trends.</p>
       </div>
@@ -127,6 +127,8 @@
       <textarea name="message" rows="5" class="form-control" formControlName="message"></textarea>
 
       <button class="btn btn-dark" type="submit" (click)='onSubmit()'>Send Message</button>
+
+      <img src="assets/mobile(1).png" alt="contact david el yosef">
 
     </div>
 
