--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -191,6 +191,8 @@ div {
     position: relative;
     margin-top: 1.5rem;
     display: inline-block;
+    height: 175px;
+    vertical-align: top;
   }
 
   .popover__content {
