--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,13 +7,13 @@
 
   <div class="logos">
     <a target="_blank" href="https://github.com/davidelyosef">
-      <img src="assets/github-white.png" alt="link" title="Github">
+      <img src="assets/logos/github-white.png" alt="link" title="Github">
     </a>
     <a target="_blank" href="mailto: davidyf96@gmail.com">
-      <img src="assets/emailcopy.png" alt="link" title="Email">
+      <img src="assets/logos/emailcopy.png" alt="link" title="Email">
     </a>
     <a target="_blank" href="https://www.linkedin.com/in/david-el-yosef-5736b7196/">
-      <img src="assets/linkedin.png" alt="link" title="Linkedin">
+      <img src="assets/logos/linkedin.png" alt="link" title="Linkedin">
     </a>
   </div>
 
@@ -22,13 +22,13 @@
     <span class="caret-bg"></span></button>
     <ul class="dropdown-content">
       <a target="_blank" href="https://github.com/davidelyosef">
-        <img src="assets/github-white.png" alt="link">
+        <img src="assets/logos/github-white.png" alt="link">
       </a>
       <a target="_blank" href="mailto: davidyf96@gmail.com">
-        <img src="assets/emailcopy.png" alt="link">
+        <img src="assets/logos/emailcopy.png" alt="link">
       </a>
       <a target="_blank" href="https://www.linkedin.com/in/david-el-yosef-5736b7196/">
-        <img src="assets/linkedin.png" alt="link">
+        <img src="assets/logos/linkedin.png" alt="link">
       </a>
     </ul>
   </div>
