--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,13 +6,13 @@
   <div class="hidden" id="fadeIn">
     <h3>- Let's get in touch -</h3>
     <a target="_blank" href="https://github.com/davidelyosef">
-      <img src="./assets/github-white.png" alt="link">
+      <img src="./assets/logos/github-white.png" alt="link">
     </a>
     <a target="_blank" href="mailto: davidyf96@gmail.com">
-      <img src="./assets/emailcopy.png" alt="link">
+      <img src="./assets/logos/emailcopy.png" alt="link">
     </a>
     <a target="_blank" href="https://www.linkedin.com/in/david-el-yosef-5736b7196/">
-      <img src="./assets/linkedin.png" alt="link">
+      <img src="./assets/logos/linkedin.png" alt="link">
     </a>
   </div>
 
