--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -103,6 +103,7 @@ nav a {
       padding: 5px;
       padding-top: 10px;
       padding-bottom: 10px;
+      font-size: 12px;
     }
     .logos {
       display: none;
