--- a/src/app/components/recommandations/recommandations.component.html
+++ b/src/app/components/recommandations/recommandations.component.html
@@ -1,28 +1,34 @@
 <div class="homeSection">
   <h3 id="recommendations">Recommendations</h3>
-  <div class="slideshow-container">
+  <div class="slideshow-container" id="my_div">
     <div class="mySlides fadeSlide">
-      <div class="numbertext">1 / 3</div>
-      <h4>Moishe Ufnik</h4>
-      <img src="http://placekitten.com/350/350" />
-      <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam molestiae non voluptatem esse. Enim, doloribus corporis ratione unde perspiciatis provident. Tempora quisquam blanditiis incidunt dolores earum voluptatum eos placeat magni?</div>
+      <div class="numbertext">1 / 2</div>
+      <h4>Assaf Finkelstein</h4>
+      <h5>Senior Lecturer - John Bryce</h5>
+      <img
+        src="https://media-exp1.licdn.com/dms/image/C5603AQGRpQQfc1uzOg/profile-displayphoto-shrink_800_800/0?e=1608163200&v=beta&t=3fjc8yWzDh_RTlA-47Xx0gTIdMrUaSg_V6mFsC49gLo"
+      />
+      <div class="text">
+        I would like to point out that David
+        invested a lot in the course. I also saw that David loves the subject
+        and connects to the field of development, which allowed him to overcome
+        barriers in material, learning, and application, and succeed in any task
+        he was given or performed.
+      </div>
     </div>
 
     <div class="mySlides fadeSlide">
-      <div class="numbertext">2 / 3</div>
-      <h4>Sonic The Kipod</h4>
-      <img src="http://placekitten.com/300/300" />
-      <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil fuga ratione id nobis, nulla eligendi quisquam ipsam possimus rem est voluptas voluptate, praesentium maiores corrupti nemo excepturi similique molestiae voluptatum!</div>
+      <div class="numbertext">2 / 2</div>
+      <h4>Tomer Ganihar</h4>
+      <h5>Artist - CONFU$IUS Group</h5>
+      <img src="https://www.google.com/s2/u/5/photos/public/AIbEiAIAAABECKKGio7_nLTG8AEiC3ZjYXJkX3Bob3RvKig5ZTRjYjUyMGVjMTgxMjQyMjYzMTU4ZDk2MzI2MGYyMTdmMDM2MWU1MAE9JhTo7LdjNx6-Bwe72zbOBtcLCg?sz=300" />
+      <div class="text">
+        The website looks great. I showed to a lot of people and everyone was
+        very impressed. Thank you!
+      </div>
     </div>
 
-    <div class="mySlides fadeSlide">
-      <div class="numbertext">3 / 3</div>
-      <h4>Razer The Rabbit</h4>
-      <img src="http://placekitten.com/200/200" />
-      <div class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. In consequuntur qui vel perspiciatis magni maxime iusto quisquam quas quam omnis, sint ea deserunt rem expedita minima eum est beatae facilis!</div>
-    </div>
-
-    <a class="prev" (click)="plusSlides(-1)" style="left: 0;">&#10094;</a>
+    <a class="prev" (click)="plusSlides(-1)" style="left: 0">&#10094;</a>
     <a class="next" (click)="plusSlides(1)">&#10095;</a>
   </div>
   <br />
@@ -30,6 +36,5 @@
   <div style="text-align: center">
     <span class="dot" (click)="currentSlide(1)"></span>
     <span class="dot" (click)="currentSlide(2)"></span>
-    <span class="dot" (click)="currentSlide(3)"></span>
   </div>
 </div>
