--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -8,7 +8,7 @@ div {
 
   #intro {
     text-align: center;
-    height: 95vh;
+    height: 75vh;
 
     .binary,
     #code {
@@ -16,7 +16,7 @@ div {
       position: absolute;
       top: 5%;
       right: 0;
-      height: 90%;
+      height: 80%;
       z-index: -1;
 
       img {
@@ -124,6 +124,9 @@ div {
 #portfolio,
 #practiceProjects {
 
+  position: relative;
+  z-index: 3;
+
   .btn {
     display: none;
     position: absolute;
@@ -177,12 +180,18 @@ div {
     text-align: center;
   }
 
+  .popover__title:first-child {
+    object-fit: cover;
+    height: 100%;
+  }
+
   .popover__wrapper {
     position: relative;
     margin-top: 1.5rem;
     display: inline-block;
     height: 158px;
     vertical-align: top;
+    box-shadow: 0 0 10px 5px #000;
   }
 
   .mobile {
@@ -203,6 +212,7 @@ div {
     padding: 1.5rem;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
     width: auto;
+    border-radius: 15px;
 
     h3 {
       text-align: center;
@@ -287,6 +297,7 @@ div {
   color: #2C2F34;
   width: 270px;
   margin: auto;
+  font-size: 17px;
 }
 
 #skills .logoSkill img {
